Refactor to add dependent service type which is required for building remote proxy